# AWS_CodeBuild

./: README.md
Roboscrub_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
Roboscrub_ws/devel/lib/pkgconfig/: CleaningCar.pc  scrubber_gazebo.pc
Roboscrub_ws/devel/lib/scrubber_gazebo/: scrubber_gazebo_cleanArea
Roboscrub_ws/src/CleaningCar/config/: joint_names_CleaningCar.yaml
Roboscrub_ws/src/CleaningCar/meshes/: front_wheel_Link.STL  ladar_Link.STL  left_wheel_Link.STL  right_wheel_Link.STL  universal_wheel_Link.STL
Roboscrub_ws/src/CleaningCar/urdf/: CleaningCar.csv  CleaningCar.gazebo.xacro
Roboscrub_ws/src/database/: README.md
Roboscrub_ws/src/database/db_msgs/: CMakeLists.txt
Roboscrub_ws/src/launcher/: README.md
Roboscrub_ws/src/launcher/launcher/: CMakeLists.txt  package.xml
Roboscrub_ws/src/launcher/launcher_msgs/: CMakeLists.txt  package.xml
Roboscrub_ws/src/launcher/launcher_msgs/msg/: MissionFeedback.msg  MissionGoal.msg  MissionResult.msg
Roboscrub_ws/src/launcher/launcher_state_machine/: CMakeLists.txt  package.xml
Roboscrub_ws/src/launcher/launcher_state_machine/include/launcher_state_machine/: Automatic.h  Manual.h  Mapping.h  ScrubberStates.h  StateMachine.h  Tracking.h
Roboscrub_ws/src/launcher/launcher_state_machine/launch/: scrubber_launcher.launch
Roboscrub_ws/src/launcher/launcher_state_machine/src/: Automatic.cpp  Manual.cpp  Mapping.cpp  ScrubberStates.cpp  StateMachine.cpp  Tracking.cpp
Roboscrub_ws/src/localizer/: CMakeLists.txt  package.xml
Roboscrub_ws/src/mapper/: CMakeLists.txt  README.md
Roboscrub_ws/src/mapper/config/: scrubber_2d.lua  scrubber_2d_localization.lua
Roboscrub_ws/src/mapper/launch/: mapper.launch  mapper_cartographer.launch  mapper_cartographer_localization.launch  mapper_gmapping.launch
Roboscrub_ws/src/mapper/rviz/: demo_2d.rviz
Roboscrub_ws/src/navigator/: CMakeLists.txt  package.xml
Roboscrub_ws/src/navigator/launch/: amcl.launch  move_base_flex.launch  navigator.launch
Roboscrub_ws/src/navigator/maps/: test_th.pgm  test_th.yaml
Roboscrub_ws/src/navigator/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_flex_params.yaml  recovery_behaviors.yaml
Roboscrub_ws/src/navigator/rviz/: navigator_mbf.rviz
Roboscrub_ws/src/navigator/scripts/: mbf_move_base_action.py  plan_exec_sm.py  replan_sm.py
Roboscrub_ws/src/navigator/src/: speed_ratio.cpp  test_path_node.cpp
Roboscrub_ws/src/operator/roborock_app/: CMakeLists.txt  package.xml
Roboscrub_ws/src/pc_tool/: CMakeLists.txt  package.xml
Roboscrub_ws/src/pc_tool/src/: pc_tool.cpp  pc_tool_node.cpp
Roboscrub_ws/src/scrubber/scrubber/: CMakeLists.txt  package.xml
Roboscrub_ws/src/scrubber/scrubber_gazebo/: CMakeLists.txt  README.md
Roboscrub_ws/src/scrubber/scrubber_msgs/: CMakeLists.txt  package.xml
Roboscrub_ws/src/scrubber_gazebo/: CMakeLists.txt  package.xml
simulation_ws/: .rosinstall
simulation_ws/src/CleaningCar/: CMakeLists.txt  package.xml
simulation_ws/src/CleaningCar/launch/: display.launch
simulation_ws/src/CleaningCar/meshes/: imu_Link.STL
simulation_ws/src/database/database/: CMakeLists.txt  package.xml
simulation_ws/src/database/database/db/: CMakeLists.txt
simulation_ws/src/database/database/include/database/: DatabaseHelper.h
simulation_ws/src/database/database/scripts/: scrubber_db_generator.py
simulation_ws/src/database/database/src/: DatabaseHelper.cpp  scrubberDatabase.cpp
simulation_ws/src/database/db_msgs/: CMakeLists.txt  package.xml
simulation_ws/src/launcher/launcher_msgs/: CMakeLists.txt  package.xml
simulation_ws/src/launcher/launcher_state_machine/: CMakeLists.txt  package.xml
simulation_ws/src/launcher/launcher_state_machine/include/launcher_state_machine/: Automatic.h  Manual.h  Mission.h  Report.h  ScrubberStates.h  StateMachine.h
simulation_ws/src/launcher/launcher_state_machine/launch/: sim_scrubber_launcher.launch
simulation_ws/src/launcher/launcher_state_machine/param/: automatic_costmap.yaml
simulation_ws/src/launcher/launcher_state_machine/src/: Automatic.cpp  Manual.cpp  Report.cpp  ScrubberStates.cpp  StateMachine.cpp  Tracking.cpp  launcherStateMachineNode.cpp
simulation_ws/src/mapper/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/mapper/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  scrubber_2d.lua  scrubber_2d_localization.lua  teb_local_planner_params.yaml
simulation_ws/src/mapper/launch/: explore.launch  mapper.launch  mapper_cartographer.launch  mapper_cartographer_localization.launch  mapper_gmapping.launch  mapperex.launch  move_base.launch  simu_backpack.launch
simulation_ws/src/mapper/rviz/: mapper_cartographer.rviz
simulation_ws/src/mapper/src/: flat_world_imu_node.cpp  record_odom.cpp
simulation_ws/src/navigation/amcl/: CMakeLists.txt  package.xml
simulation_ws/src/navigator/costmap_prohibition_layer/: CMakeLists.txt  package.xml
simulation_ws/src/navigator/navigator/: CMakeLists.txt  README.md  package.xml
simulation_ws/src/navigator/path_coverage/: CMakeLists.txt  package.xml
simulation_ws/src/navigator/path_coverage/config/: cleaning_costmap_params.yaml
simulation_ws/src/navigator/path_coverage/include/: CleaningPathPlanner.h  trajectory_generator_waypoint.h
simulation_ws/src/navigator/path_coverage/launch/: path_planning.launch
simulation_ws/src/navigator/path_coverage/src/: CleaningPathPlanner.cpp  GetPathTest.cpp  PathPlanningNode.cpp  trajectory_generator_waypoint.cpp
simulation_ws/src/navigator/path_coverage/srv/: GetPathInZone.srv
simulation_ws/src/scrubber/CleaningCar/: CMakeLists.txt  README.md
simulation_ws/src/scrubber/CleaningCar/launch/: gazebo.launch
simulation_ws/src/scrubber/CleaningCar/meshes/: base_link.STL
simulation_ws/src/scrubber/CleaningCar/urdf/: CleaningCar.urdf.xacro
simulation_ws/src/scrubber_gazebo/: CMakeLists.txt  package.xml  setup.py
simulation_ws/src/test_server/: CMakeLists.txt  package.xml
(+199 files in other folders)
